add MetadataProvider